--- a/html/task-04.html
+++ b/html/task-04.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 4</title>
-    <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" href="/css/common.css" />
   </head>
   <body>
-    <p><a href="index.html">Go back</a></p>
+    <p><a href="/index.html">Go back</a></p>
 
     <div id="counter">
       <button type="button" data-action="decrement">-1</button>
@@ -16,6 +16,6 @@
       <button type="button" data-action="increment">+1</button>
     </div>
 
-    <script src="js/task-04.js" type="module"></script>
+    <script src="/js/task-04.js" type="module"></script>
   </body>
 </html>
