--- a/html/task-06.html
+++ b/html/task-06.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 6</title>
-    <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" href="/css/common.css" />
     <style>
       #validation-input {
         border: 2px solid #bdbdbd;
@@ -21,7 +21,7 @@
     </style>
   </head>
   <body>
-    <p><a href="index.html">Go back</a></p>
+    <p><a href="/index.html">Go back</a></p>
 
     <input
       type="text"
@@ -30,6 +30,6 @@
       placeholder="Please enter 6 symbols"
     />
 
-    <script src="js/task-06.js" type="module"></script>
+    <script src="/js/task-06.js" type="module"></script>
   </body>
 </html>
